update game test

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
     <body><canvas id=canvas oncontextmenu=event.preventDefault() tabindex=-1></canvas><img id=presplash
             src=web-presplash.jpg>
         <div id=ContextContainer><a id=ContextButton>≡</a><br>
-            <div id=ContextMenu style=display:none><a href=https://www.renpy.org/ target=_blank>Powered by Ren'Py</a>
-            </div>
+            <div id=ContextMenu style=display:none>
+                    <a href=https://www.renpy.org/ target=_blank>Powered by Ren'Py</a></div>
         </div>
         <div id=statusDiv class=hidden>
             <div id=statusTextDiv></div><progress id=statusProgress max=100 value=0></progress>
